# harfbuzz-rs

./: Cargo.toml  README.md  build.rs
src/: blob.rs  buffer.rs  face.rs  font.rs  lib.rs  shape.rs
src/ffi/: blob.rs  buffer.rs  common.rs  face.rs  font.rs  ft.rs  mod.rs  set.rs  shape.rs  unicode.rs
