[package]
name = "harfbuzz"
version = "0.2.0"
authors = ["Krzysztof Mędrzycki <aiwenari@gmail.com>"]
edition = "2018"
links = "harfbuzz"

[features]
default = ["freetype"]
freetype = ["freetype-rs"]

[dependencies]
bitflags = "1.0.4"
freetype-rs = { version = "0.19.0", optional = true }

[dependencies.cffi]
version = "0.1.0"
git = "https://github.com/aiwenar/cffi.git"

[build-dependencies]
pkg-config = "0.3.14"
semver = "0.9.0"
